--- a/about.html
+++ b/about.html
@@ -33,18 +33,17 @@
 
         <ul class="navigation-list  float-right ">
 
-                <li class="navigation-item">
-                        <a class="navigation-link" href="index.html">Home</a>
-                      </li>
-        
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="blog.html">Blog</a>
-                  </li>
-        
-                  <li class="navigation-item">
-                    <a class="navigation-link" href="about.html">About</a>
-                  </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Home</a>
+          </li>
 
+          <li class="navigation-item">
+            <a class="navigation-link" href="blog.html">Blog</a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">About</a>
+          </li>
         </ul>
 
       </section>
@@ -55,9 +54,13 @@
 
       <section class="container">
         <div class="about">
-           <div class="h2 centered"><u>About me</u></div>
-           <div class="p centered">My name is Basim and I am</div>
-           <hr class="style1">
+          <div class="h2 centered"><u>About me</u></div>
+          <div class="p centered">My name is Basim and I am</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque deleniti dolor cumque necessitatibus
+            adipisci impedit in fugiat quos possimus labore.
+          </p>
+          <hr class="style1">
         </div>
       </section>
 
@@ -77,10 +80,10 @@
     var doNotTrack = false;
     if (!doNotTrack) {
       (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
       })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-34513648-1', 'auto');
 
