--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG"
     crossorigin="anonymous">
   <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/style.min.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
 
@@ -33,9 +33,9 @@
 
         <ul class="navigation-list  float-right ">
 
-            <li class="navigation-item">
-                <a class="navigation-link" href="index.html">Home</a>
-              </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Home</a>
+          </li>
 
           <li class="navigation-item">
             <a class="navigation-link" href="blog.html">Blog</a>
@@ -56,8 +56,7 @@
       <section class="container centered">
         <div class="about">
 
-          <div class="avatar"><img src="images/screenshot_7.png"
-              alt="avatar"></div>
+          <div class="avatar"><img src="images/screenshot_7.png" alt="avatar"></div>
 
           <h1>Basim Abdullah Tariq</h1>
           <h2>Super friendly sometimes toxic gamer</h2>
@@ -85,24 +84,6 @@
     </footer>
 
   </main>
-
-
-  <script>
-    var doNotTrack = false;
-    if (!doNotTrack) {
-      (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-      ga('create', 'UA-34513648-1', 'auto');
-
-      ga('send', 'pageview');
-    }
-  </script>
-
-
 </body>
 
 </html>
