--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
 
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html">About</a>
+            <a class="navigation-link" href="/about">About</a>
           </li>
 
         </ul>
