Image path added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="container centered">
         <div class="about">
 
-          <div class="avatar"><img src="images/screenshot_7.png" alt="avatar"></div>
+          <div class="avatar"><img src="/images/Screenshot_7.png" alt="avatar"></div>
 
           <h1>Basim Abdullah Tariq</h1>
           <h2>Super friendly sometimes toxic gamer</h2>
